--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>480</height>
+    <width>910</width>
+    <height>675</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,7 +43,7 @@
        <item>
         <widget class="QLabel" name="label_rote">
          <property name="text">
-          <string>旋转角</string>
+          <string>motor</string>
          </property>
         </widget>
        </item>
